--- a/JK_HW2_Movies_Recommendation.ipynb
+++ b/JK_HW2_Movies_Recommendation.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "JK HW2_Movies Recommendation.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOuDTxYKC7gu7xo8qu0kpIy",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jingkunzler211/Movie_Recommender/blob/main/JK_HW2_Movies_Recommendation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -2069,7 +2057,7 @@
         "id": "R9wPrw7pJcaz"
       },
       "source": [
-        "# Find the similar movies given a movie title"
+        "# Find the similar movies for movies"
       ]
     },
     {
@@ -2119,16 +2107,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ct4XorQPkI42"
+      },
+      "source": [
+        "**merging itemFactors and movies_fs**\n",
+        "\n",
+        "By doing so, we can ask user to enter a movie name and find its movie id, which is used in a function called similarMovies to find its top 10 similar movies.\n",
+        "\n",
+        "It's easier for an user to know the movie name than knowing movieId, thus we want the user to search by movie name."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sh5ob-5fO2m0"
       },
       "source": [
-        "# merging itemFactors and movies_fs\n",
-        "# we can ask user to enter a movie name and find its movie id, \n",
-        "# which is used in a function called similarMovies to find its top 10 similar movies.\n",
-        "# It's easier for an user to know the movie name than knowing movieId, thus we want the user to search by movie name.\n",
-        "\n",
         "merge_kdf = movies_ks.merge(itemFactors, left_on='movieId', right_on='id')"
       ],
       "execution_count": null,
